# ServiceProtScanner_GuiMVP

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROPOSAL.md  README.md  SETUP.md  vcpkg.json
src/: main.cpp
src/core/: result.hpp
src/gui/views/: charts_panel.cpp  charts_panel.hpp  cvss_delegate.cpp  cvss_delegate.hpp  details_panel.cpp  details_panel.hpp  details_panel.ui  epss_delegate.cpp  epss_delegate.hpp  export_actions.cpp  export_actions.hpp  main_window.cpp  main_window.hpp  main_window.ui  result_model.cpp  result_model.hpp  risk_delegate.cpp  risk_delegate.hpp
src/report/: csv_writer.cpp  csv_writer.hpp  html_writer.cpp  html_writer.hpp  json_writer.cpp  json_writer.hpp
tests/: dummy_data.hpp
